--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mantine/hooks": "^5.1.6",
     "@mantine/modals": "^5.1.6",
     "@mantine/notifications": "^5.1.6",
+    "@tabler/icons": "^1.83.1",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-query-devtools": "^4.0.10",
     "dayjs": "^1.11.5",
