--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@tabler/icons": "^1.83.1",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-query-devtools": "^4.0.10",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.0",
     "react": "^18.2.0",
