--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,8 +9,13 @@ license = "MIT"
 python = "^3.10"
 Django = "^4.1"
 django-ninja = "^0.19.1"
-cloudinary = "^1.29.0"
 python-dotenv = "^0.20.0"
+Pillow = "^9.2.0"
+pydantic = "^1.9.2"
+psycopg2-binary = "^2.9.3"
+dj-database-url = "^1.0.0"
+django-storages = "^1.13.1"
+boto3 = "^1.24.56"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
